--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "parse": "^4.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^5.3.4",
